--- a/src/pages/pages.css
+++ b/src/pages/pages.css
@@ -1,3 +1,16 @@
-.PostTitle {
+
+.Post {
+  color: #333;
+  text-align: center;
+  display: block;
+  text-decoration: none;
+  z-index: 10;
+}
+
+.Post h3 {
   color: #111;
+}
+
+.Post__date {
+  margin: 4px 0;
 }
