--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,7 +1,10 @@
+html, body {
+  background-color: #fffffa;
+}
 
 h1 {
   font-size: 40px;
-  color: #333;
+  color: #222;
   margin-bottom: 0;
 }
 
@@ -11,9 +14,9 @@ h2 {
 
 h3 {
   font-size: 24px;
-  color: #333;
-  margin-bottom: 4px;
+  color: #111;
 }
+
 
 /* Header */
 header {
@@ -22,6 +25,11 @@ header {
   height: 140px;
   text-align: center;
   margin-bottom: 1.666rem !important;
+}
+header .blog-title {
+  font-size: 24px;
+  color: #333;
+  margin-bottom: 4px;
 }
 .header-content {
   padding: 16px 0 0;
