--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -12,9 +12,16 @@ h2 {
   font-size: 32px;
 }
 
-h3 {
-  font-size: 24px;
+h3, h4 {
   color: #111;
+}
+
+h3 {
+  font-size: 26px;
+}
+
+h4 {
+  font-size: 22px;
 }
 
 
