--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -56,7 +56,9 @@ footer {
 
 .container {
   margin: auto;
-  max-width: 700px;
+  max-width: 720px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 main p {
