--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
   background-color: #fffffa;
 }
 
@@ -6,13 +7,15 @@ h1 {
   font-size: 40px;
   color: #222;
   margin-bottom: 0;
+  width: 400px;
 }
 
 h2 {
   font-size: 32px;
 }
 
-h3, h4 {
+h3,
+h4 {
   color: #111;
 }
 
@@ -23,7 +26,6 @@ h3 {
 h4 {
   font-size: 22px;
 }
-
 
 /* Header */
 header {
@@ -36,10 +38,12 @@ header {
 header .blog-title {
   font-size: 24px;
   color: #333;
-  margin-bottom: 4px;
+}
+header .blog-title img {
+  width: 400px;
 }
 .header-content {
-  padding: 16px 0 0;
+  padding: 64px 0 0;
 }
 .header-content--bottom {
   align-self: flex-end;
@@ -49,7 +53,7 @@ header .blog-title {
 }
 
 /* Footer */
-footer { 
+footer {
   text-align: center;
   margin: 32px auto !important;
 }
