--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -5,12 +5,12 @@ body {
 }
 
 h1 {
-  font-size: 40px;
+  font-size: 2.5em;
   color: #222;
 }
 
 h2 {
-  font-size: 32px;
+  font-size: 2em;
 }
 
 h3,
@@ -19,11 +19,11 @@ h4 {
 }
 
 h3 {
-  font-size: 28px;
+  font-size: 1.5em;
 }
 
 h4 {
-  font-size: 22px;
+  font-size: 1em;
 }
 
 h5 {
