--- a/src/templates/blog-post.css
+++ b/src/templates/blog-post.css
@@ -29,3 +29,11 @@ pre {
   background-color: #ddd;
   padding: 1em;
 }
+
+.editorToolbar {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #eee;
+}
