--- a/src/templates/pages.css
+++ b/src/templates/pages.css
@@ -44,3 +44,11 @@
   color: #fffffa;
   padding: 0 8px;
 }
+
+pre#contenteditable {
+  white-space: pre-wrap;       /* css-3 */
+  white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+  white-space: -pre-wrap;      /* Opera 4-6 */
+  white-space: -o-pre-wrap;    /* Opera 7 */
+  word-wrap: break-word; 
+}
