--- a/src/templates/blog-post.css
+++ b/src/templates/blog-post.css
@@ -30,6 +30,18 @@ pre {
   padding: 1em;
 }
 
+textarea {
+  background: none;
+  border: none;
+  resize: none;
+  width: 100%;
+  height: 400px;
+  overflow: hidden;
+  padding-bottom: 32px;
+  margin-bottom: 32px;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
 .editorToolbar {
   position: fixed;
   bottom: 0;
