--- a/src/templates/blog-post.css
+++ b/src/templates/blog-post.css
@@ -25,6 +25,14 @@ main h2 {
   margin-top: 2.666rem;
 }
 
+main .articleBodyContainer {
+  width: 100%;
+  margin: 0 auto;
+  max-width: 700px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
 pre {
   background-color: #ddd;
   padding: 1em;
