--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,6 +1,6 @@
 html,
 body {
-  font-family: -apple-system, BlinkMacSystemFont;
+  font-family: "Crimson Text", Georgia, 'Times New Roman', Times, serif;
   background-color: #fff;
 }
 
@@ -28,6 +28,10 @@ h4 {
 
 h5 {
   font-weight: 300;
+}
+
+button {
+  font-family: -apple-system, BlinkMacSystemFont;
 }
 
 .TopBarAccent {
