--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -4,6 +4,15 @@ body {
   background-color: #fff;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Crimson Text", Georgia, 'Times New Roman', Times, serif;
+}
+
 h1 {
   font-size: 2.5em;
   color: #222;
