--- a/src/templates/blog-post.css
+++ b/src/templates/blog-post.css
@@ -95,7 +95,7 @@ textarea:focus {
   left: 0;
   right: 0;
   padding: 8px;
-  background-color: #4734f3;
+  background-color: #3e652f;
   transition: top 0.3s ease;
 }
 
@@ -105,7 +105,7 @@ textarea:focus {
 
 .BlogPostToolbar button {
   color: #fff;
-  background-color: #4734f3;
+  background-color: #3e652f;
   border: none;
   border-radius: 8px;
   cursor: pointer;
@@ -114,7 +114,7 @@ textarea:focus {
 
 .BlogPostToolbar button:hover {
   background-color: #fff;
-  color: #4734f3;
+  color: #3e652f;
 }
 
 .BlogPostToolbar button.publishButton {
