--- a/src/templates/pages.css
+++ b/src/templates/pages.css
@@ -22,7 +22,7 @@
 
 .Post:hover h3 span,
 .Post:hover h5 {
-  color: #4734f3;
+  color: #3e652f;
 }
 
 .Post__date {
@@ -46,7 +46,7 @@
 
 .LatestPostLabel {
   font-family: -apple-system, BlinkMacSystemFont;
-  background: #4734f3;
+  background: #3e652f;
   color: #fffffa;
   padding: 0 8px;
 }
@@ -54,7 +54,7 @@
 .link-cta {
   font-family: -apple-system, BlinkMacSystemFont;
   text-decoration: none;
-  background: #4734f3;
+  background: #3e652f;
   color: #fffffa;
   padding: 4px 8px;
 }
