--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -165,7 +165,7 @@ form.NewsletterSignUpForm button {
 
 
 footer {
-  background-color: #0e065d;
+  background-color: #1e3117;
   margin: 32px auto 0 !important;
   padding: 32px;
   color: #eee;
