--- a/src/templates/blog-post.css
+++ b/src/templates/blog-post.css
@@ -39,8 +39,10 @@ pre {
 }
 
 .image-gallery-sm img {
+  width: 80%;
   max-width: 450px;
   max-height: 450px;
+  margin: 0 auto;
 }
 
 /* Editing Styles */
